dataset1235/2025-2/2318198438/users/1967357790/executions/2601575092_146336312.log
== RUN (2025-08-12 00:25:35)
-- CODE: 
guerreiros = 3
moedas = 50
cada_um = mosntro // guerreiros
print(cada_um)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cada_um = mosntro // guerreiros
              ^^^^^^^
NameError: name 'mosntro' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cada_um = mosntro // guerreiros
              ^^^^^^^
NameError: name 'mosntro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:26:45)
-- CODE: 
guerreiros = 3
moedas = 50
cada_um = moedas // guerreiros
print(cada_um)
print(moedas % guerreiros)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:25:44)
-- CODE: 
guerreiros = 3
moedas = 50
cada_um = moedas // guerreiros
print(cada_um)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:26:14)
-- CODE: 
guerreiros = 3
moedas = 50
cada_um = moedas // guerreiros
print(cada_um)
print(moedas / guerreiros)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 00:26:46)
-- CODE: 
guerreiros = 3
moedas = 50
cada_um = moedas // guerreiros
print(cada_um)
print(moedas % guerreiros)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:26:25)
-- CODE: 
guerreiros = 3
moedas = 50
cada_um = moedas // guerreiros
print(cada_um)
print(moedas // guerreiros % 0)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(moedas // guerreiros % 0)
          ~~~~~~~~~~~~~~~~~~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(moedas // guerreiros % 0)
          ~~~~~~~~~~~~~~~~~~~~~^~~
ZeroDivisionError: integer modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
